// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ChatList renders correctly when focused 1`] = `
"╭─────────────────────────────────╮
│ Chats                           │
│─────────────────────────────────│
│                                 │
│     John Doe                    │
│ ●   Jane Smith (3)              │
│   # Work Group                  │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
╰─────────────────────────────────╯"
`;

exports[`ChatList renders correctly when unfocused 1`] = `
"╭─────────────────────────────────╮
│ Chats                           │
│─────────────────────────────────│
│                                 │
│     John Doe                    │
│ ●   Jane Smith (3)              │
│   # Work Group                  │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
╰─────────────────────────────────╯"
`;

exports[`ChatList renders chat with unread indicator in cyan 1`] = `
"╭─────────────────────────────────╮
│ Chats                           │
│─────────────────────────────────│
│                                 │
│     John Doe                    │
│ ●   Jane Smith (3)              │
│   # Work Group                  │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
╰─────────────────────────────────╯"
`;

exports[`ChatList renders empty chat list 1`] = `
"╭─────────────────────────────────╮
│ Chats                           │
│─────────────────────────────────│
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
│                                 │
╰─────────────────────────────────╯"
`;
